--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "ES2022",
-    "ignoreDeprecations": "6.0"
+    "target": "ES2022"
   },
   "include": ["src"]
 }
