--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - master  # Change to your deployment branch
+      - main  # Change to your deployment branch
 
 jobs:
   build-and-deploy:
